# doru

./: .editorconfig  .pre-commit-config.yaml  .python-version  LICENSE  Makefile  README.md  app.py  log_config.json  main.py  pyproject.toml  tox.ini
.github/workflows/: build.yml  ci.yml  publish.yml
doru/: __init__.py  cli.py  daemon_manager.py  envs.py  exceptions.py  exchange.py  logger.py  main.py  scheduler.py  session.py  task_manager.py  type.py  types.py
doru/api/: app.py  client.py  daemonize.py  router.py  schema.py  session.py
doru/manager/: container.py  credential_manager.py  task_manager.py  utils.py
tests/: test_cli.py  test_client.py  test_credential_manager.py  test_daemon_manager.py  test_exchange.py  test_router.py  test_scheduler.py  test_task_manager.py  test_utils.py
