[tool.poetry]
name = "doru"
version = "0.1.0"
description = "A tiny command line tool for regular investment of cryptocurrencies on centralized exchanges using dollar-cost averaging."
authors = ["Masaharu Shimizu <masaharu.shimizu08@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/masa-08/doru"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
tabulate = "^0.9.0"
requests-unixsocket = "^0.3.0"
pydantic = "^1.10.2"
schedule = "^1.1.0"
nanoid = "^2.0.0"
fastapi = "^0.89.1"
dependency-injector = "^4.41.0"
uvicorn = "^0.20.0"
python-daemon = "^2.3.2"
pid = "^3.0.4"
backoff = "^2.2.1"
ccxt = "^2.8.37"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
typing-extensions = "^4.4.0"
pytest-mock = "^3.10.0"
types-tabulate = "^0.9.0"
httpx = "^0.23.3"
types-requests = "^2.28.11"
pytest-freezegun = "^0.4.2"
types-retry = "^0.9.9.2"
pre-commit = "^2.21.0"
tox = "^4.4.6"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
doru = "doru:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
